# gemini-cli

./: readme.md
Gemini CLI Commands Cheat Sheet/: readme.md
Part 1 – Installation and Getting Started/: app.py  readme.md
Part 1 – Installation and Getting Started/templates/: index.html
Part 10 – Gemini CLI and VS Code Integration/: readme.md  server.py
Part 11 – Gemini CLI Extensions/: readme.md
Part 12 – Gemini CLI GitHub Actions/: .gitignore  GEMINI.md  README.md  app.py  pyproject.toml
Part 12 – Gemini CLI GitHub Actions/.github/workflows/: gemini-triage.yml  gemini.yml
Part 12 – Gemini CLI GitHub Actions/static/: style.css
Part 12 – Gemini CLI GitHub Actions/templates/: index.html
Part 2 – Gemini CLI Command line options/: GEMINI.md  readme.md
Part 3 – Configuration settings via settings.json and .env files/: readme.md
Part 4 – Built-in Tools/: finance-news-today.txt  readme.md
Part 5 – Using Github MCP Server/: readme.md
Part 6 – More MCP Servers  Firebase, Google Workspace/: Firebase-MCP.md  readme.md  settings.json
Part 7 – Custom slash commands/: custom-tool-result.md  readme.md
Part 7 – Custom slash commands/.gemini/commands/: plan.toml
Part 8 – Building your own MCP Server/: pyproject.toml  readme.md  server.py
Part 9 – Understanding Context, Memory and Conversational Branching/: readme.md
