[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "jinja2==3.1.2",
    "pyfiglet==0.8.post1",
    "python-multipart==0.0.6",
    "setuptools>=80.9.0",
    "uvicorn==0.24.0.post1",
]
